--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       rel="stylesheet"
     />
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;600;700&display=swap" rel="stylesheet">
-
-    <title>Airbnb</title>
+    <link rel="icon" href="/favicon.png" type="image/png" />
+    <title>Aircnc</title>
   </head>
   <body>
     <div id="root"></div>
